--- a/lab-4-subject.yml
+++ b/lab-4-subject.yml
@@ -2,4 +2,5 @@ words: I,You,He,She,They
 
 eureka:
   client:
-    serviceUrl: http://localhost:8010/eureka/
+    serviceUrl: 
+      defaultZone: http://localhost:8010/eureka/
